# stocktake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  params.md  run.sh  setup.sh
config/: amcl.yaml  config.rviz  costmap.yaml  ekf.yaml  nav2_default_view.rviz  old_controller.yaml  rviz_robot_only.rviz
include/: rfidscanner.hh  rfidtagmanager.hh  robot.hh
include/archive/: format.hh  paramsweep.hh  robot.hh
launch/: frames_2024-08-04_15.11.35.gv  launch3.py  launchstocktake.py  minimal.py  robot_only.py
models/: formatted_out.sdf  gen_mecanum.sdf  main.sdf  mecanum-mirror.sdf  mecanum-mirrorsdf.fmt  mecanum.sdf  mecanumsdf.fmt  robot.sdf  shelf1.sdf  tag_locs.txt  test-shelf.sdf
models/archive/: mecanum-mirror.sdf  mecanum.sdf  omni.sdf  walls.sdf
models/cereal/meshes/: cereal.glb
models/counter/: model.sdf
models/counter/meshes/: bench.glb
models/counter2/: model.config  model.sdf
models/counter2/meshes/: Counter.glb
models/floor/: model.config
models/meshes/: mecanum-roller.stl  robot_base.stl
models/robot/: robot.sdf
models/shelf/: model.sdf
models/shelf2/: model.config  model.sdf
models/shelf3/: model.config  model.sdf
src/: format.cc  paramsweep.cc  rfidtag.cc  rfidtagmanager.cc  robot.cc  tag.cc
src/archive/: storegen.cc
src/test_pubsub/: CMakeLists.txt  package.xml
stocktake_core/: CMakeLists.txt  package.xml  setup.sh
stocktake_core/archive/: gen_mecanum_mirror.sdf  mecanum-robot.sdf
stocktake_core/archive/meshes/: cube1m.stl
stocktake_core/config/: controller.yaml  nav2_params.yaml  newconf.rviz
stocktake_core/hooks/: stocktake_core_pkg.dsv.in  stocktake_core_pkg.sh.in
stocktake_core/launch/: launch3.py  test.sh
stocktake_core/models/: test-shelf.sdf
stocktake_core/models/cereal/: model.sdf
stocktake_core/models/counter/: model.config
stocktake_core/models/floor/: model.sdf
stocktake_core/models/robot/: model.config
stocktake_core/models/shelf/: model.config
stocktake_core/models/shelf3/: model.sdf
stocktake_core/models/shelf3/meshes/: shelf-model-latest.glb
stocktake_core/util/: out.sdf  test_layout.sh
stocktake_core/worlds/: robot_only.sdf  simplestore.sdf  test_bench.sdf  test_shelf.sdf
stocktake_core/worlds/generate/: gen2.py  out_generated.sdf  spawn_tags.sh
stocktake_frontend/: CMakeLists.txt  README.md  package.xml
stocktake_frontend/frontend/: package-lock.json  package.json
stocktake_frontend/frontend/mock_server/: WEBSOCKET_PROTOCOL.md  websocket_server.py
stocktake_frontend/frontend/src/app/: globals.css  page.tsx
stocktake_frontend/launch/: dev.launch.py
stocktake_nvidia_swagger/: CMakeLists.txt  package.xml  setup.cfg  setup.py
stocktake_nvidia_swagger/stocktake_nvidia_swagger/: swagger_graph_server_node.py  test_client.py
stocktake_nvidia_swagger_msgs/: CMakeLists.txt  package.xml
stocktake_nvidia_swagger_msgs/msg/: WaypointEdge.msg  WaypointGraph.msg  WaypointNode.msg
stocktake_nvidia_swagger_msgs/srv/: GenerateWaypointGraph.srv
stocktake_orchestration/: CMakeLists.txt  README.md  package.xml
stocktake_orchestration/include/: stocktake_orchestration.h
stocktake_orchestration/src/: stocktake_orchestration.cpp
stocktake_orchestration2/: CMakeLists.txt  WEBSOCKET_PROTOCOL.md  package.xml
stocktake_orchestration2/include/stocktake_orchestration2/: websocket_orchestration_node.hpp
stocktake_orchestration2/src/: orchestration.cpp  websocket_orchestration_node.cpp  workflow_transition_actions.cpp
util/: layout.py  mecanum_angle.py
worlds/: default-layout.sdf  default.sdf  main.sdf  storelayout.sdf
worlds/generate/: generate_store.py  out_generated.sdf  tag_locs.txt
