<?xml version="1.0"?>
<package format="3">
  <name>stocktake_frontend</name>
  <version>0.0.1</version>
  <description>Frontend code for stocktake web interface</description>

  <maintainer email="henrybulbeck@gmail.com">Henry Bulbeck</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

</package>
