<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stocktake_nvidia_swagger</name>
  <version>0.0.1</version>
  <description>ROS2 Node interface to NVIDIA SWAGGER waypoint generation</description>
  <maintainer email="henrybulbeck@gmail.com">Henry Bulbeck</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>stocktake_nvidia_swagger_msgs</depend>

  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
